src/snapshots/arwen_elrond_ipc__bankersq_assertion1_parser.snap
---
source: src/main.rs
expression: parser.parse(&assertion).unwrap()
---
let preds = [| "mem" |]

let post (lenf : int) (f : Bankersq.t) (lenr : int) (r : Bankersq.t) (x : int) (lenf' : int) (f' : Bankersq.t) (lenr' : int) (r' : Bankersq.t) (u : int) =
  iff (((mem f u || mem r u) || == u x)) ((mem f' u || mem r' u))

