src/snapshots/arwen_elrond_ipc__bankersq_assertion2_parser.snap
---
source: src/main.rs
expression: parser.parse(&assertion).unwrap()
---
let preds = [| "mem"; "ord" |]

let post (lenf : int) (f : Bankersq.t) (lenr : int) (r : Bankersq.t) (x : int) (lenf' : int) (f' : Bankersq.t) (lenr' : int) (r' : Bankersq.t) (u : int) =
  iff ((mem f u || mem r u)) ((((mem f' u && mem r' x) || ord r' x u) || ord f' u x))

