src/snapshots/arwen_elrond_ipc__motivating_example_assertion_parser.snap
---
source: src/main.rs
expression: parser.parse(&assertion).unwrap()
---
let preds = [| "sorted"; "hd"; "mem" |]
let pre (l : Customstk.t) (i : int) (v : bool) =
  sorted l

let post (l : Customstk.t) (i : int) (v : bool) (u : int) =
  implies (mem u l) (iff (v) ((u <= i)))

