src/snapshots/arwen_elrond_ipc__pred_parser_1.snap
---
source: src/main.rs
expression: parsed_pred
---
Atom(
    Op(
        Generic(
            "Unknown ParserType",
        ),
        "mem",
        [
            Var(
                Generic(
                    "Unknown ParserType",
                ),
                "l1",
            ),
            Var(
                Generic(
                    "Unknown ParserType",
                ),
                "u",
            ),
        ],
    ),
)
