src/snapshots/arwen_elrond_ipc__pred_parser_2.snap
---
source: src/main.rs
expression: parsed_pred
---
Or(
    [
        Atom(
            Op(
                Generic(
                    "Unknown ParserType",
                ),
                "mem",
                [
                    Var(
                        Generic(
                            "Unknown ParserType",
                        ),
                        "l1",
                    ),
                    Var(
                        Generic(
                            "Unknown ParserType",
                        ),
                        "u",
                    ),
                ],
            ),
        ),
        Atom(
            Op(
                Generic(
                    "Unknown ParserType",
                ),
                "mem",
                [
                    Var(
                        Generic(
                            "Unknown ParserType",
                        ),
                        "l2",
                    ),
                    Var(
                        Generic(
                            "Unknown ParserType",
                        ),
                        "u",
                    ),
                ],
            ),
        ),
    ],
)
