src/snapshots/arwen_elrond_ipc__pred_parser_5.snap
---
source: src/main.rs
expression: parsed_pred
---
And(
    [
        Iff(
            Atom(
                Op(
                    Generic(
                        "Unknown ParserType",
                    ),
                    "mem",
                    [
                        Var(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "l3",
                        ),
                        Var(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "u",
                        ),
                    ],
                ),
            ),
            Or(
                [
                    Atom(
                        Op(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "mem",
                            [
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "l1",
                                ),
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "u",
                                ),
                            ],
                        ),
                    ),
                    Atom(
                        Op(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "mem",
                            [
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "l2",
                                ),
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "u",
                                ),
                            ],
                        ),
                    ),
                ],
            ),
        ),
        Implies(
            Atom(
                Op(
                    Generic(
                        "Unknown ParserType",
                    ),
                    "hd",
                    [
                        Var(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "l3",
                        ),
                        Var(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "u",
                        ),
                    ],
                ),
            ),
            Or(
                [
                    Atom(
                        Op(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "hd",
                            [
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "l1",
                                ),
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "u",
                                ),
                            ],
                        ),
                    ),
                    Atom(
                        Op(
                            Generic(
                                "Unknown ParserType",
                            ),
                            "hd",
                            [
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "l2",
                                ),
                                Var(
                                    Generic(
                                        "Unknown ParserType",
                                    ),
                                    "u",
                                ),
                            ],
                        ),
                    ),
                ],
            ),
        ),
    ],
)
